0.9.7 small fix for compare_y_at_x_2
      some new constructions added

0.9.6 event functionality added to 3d generalized predicates

0.9.5 some fixed for LEDA < 4.4 (segment orientation)

0.9.4 some changes for LEDA 4.2 included
      some changes for VC 6
      demos changed
      faster rat_segment/rat_segment intersection ...

0.9.3 some kernel extensions were included
      (Do_intersect_to_right_2 and Do_intersect_to_left_2)
      changes in the predicate templates for VC 

0.9.2 faster segment intersection
      small fixes
      most LEDA kernel functors are now templates
      (this helps supporting kernel type replacement)

0.9.1 missing files checked in