@@ -1,5 +1,6 @@
 0.9.7 small fix for compare_y_at_x_2
       some new constructions added
+      convex hull projective traits stuff changed (for 3d hull)
 
 0.9.6 event functionality added to 3d generalized predicates
 
